# MinecraftServerResSync

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  config.yaml  vcpkg.json
Testing/: TAG
Testing/20240912-0948/: Test.xml
client/: CMakeLists.txt
client/src/: main.cpp
include/: config.h  http_utils.hpp  main.h  manage_res.h  models.h  res_manage.h  result.h  utils.hpp
server/: CMakeLists.txt
server/include/: components.h  http_service.h  main.h  res_manage.h
server/include/components/: comonents.hpp
server/src/: components.cpp  config.cpp  http_service.cpp  main.cpp  res_manage.cpp
src/: config.cpp  res_manage.cpp
test/: utils_test.cpp
